@@ -1,3 +1,7 @@
+2011-05-27  Jason Merrill  <jason@redhat.com>
+
+	* g++.dg/cpp0x/error6.C: New.
+
 2011-05-27  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c++/49165
